kubernetes_demos/path-based-ingress/ingress-deployment-service.yaml
# nginx-deployment, djando-deployment, nginx-service, django-service
apiVersion: apps/v1
kind: Deployment
metadata: 
  name: nginx-deployment
spec:
  replicas: 2
  selector:
    matchLabels:
      app: nginx-app
  template:
    metadata:
      name: nginx-pod
      labels:
        app: nginx-app
    spec:
      containers:
        - name: nginx-container
          image: nginx:latest
          ports:
            - containerPort: 80

---
apiVersion: v1
kind: Service
metadata:
  name: nginx-service
spec:
  type: ClusterIP
  selector: 
    app: nginx-app
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 80

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: django-deployment
spec:
  replicas: 2
  selector:
    matchLabels:
      app: django-app
  template:
    metadata:
      name: django-pod
      labels:
        app: django-app
    spec:
      containers:
        - name: django-container
          image: venu1322/django-web-app:0.0.2.RELEASE
          ports:
            - containerPort: 8000

---
apiVersion: v1
kind: Service
metadata: 
  name: django-service
spec:
  type: ClusterIP
  selector:
    app: django-app
  ports:
    - name: http
      protocol: TCP
      port: 8000
      targetPort: 8000
