kubernetes_demos/path-based-ingress/path-based-ingress.yaml
# path based routing by ingress 
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: path-base-ingress
  annotations:
    nginx.ingress.kubernetes.io/default-backend: default-http-backend
spec:
  rules:
    - host: ingress-app.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service: 
                name: nginx-service
                port: 
                  number: 80
          - path: /demo
            pathType: Prefix
            backend:
              service: 
                name: django-service
                port:
                  number: 8000
